[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "rust_dataframe_utils"  # Oppdater hvis prosjektets navn er annerledes
version = "0.1.0"
authors = [
    { name = "Johnny Stroemoe", email = "easy2johnny@gmail.com" }  # Oppdater med ditt navn og e-post
]
description = "A Python module built with Rust and Polars"  # Dette kan være prosjektets beskrivelse
readme = "README.md"
license = "MIT"